examples/test/testpolicy8486.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8486
  namespace: namespace471
spec:
  podSelector:
    matchLabels:
      key39: value8
      key15: value25
      key6: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value27
          key32: value25
          key39: value4
      podSelector:
        matchLabels:
          key33: value8
          key22: value13
          key40: value15
